--- a/configs.yaml
+++ b/configs.yaml
@@ -1,21 +1,26 @@
-logger:
-    debug: true
-    level: debug
-database:
-    uri: sqlite:///tmp/kanthor.sqlite
-msgbroker:
-    uri: nats://127.0.0.1:4222
-    stream:
-        name: dataplane
-        subject: message
-        replicas: 0
-        limits:
-            msgs: 50000
-            msg_bytes: 65536
-            # 64kb * 50000 ~ 3Gb
-            bytes: 3276800000
-            # 60*60*24*3 = 3d
-            age: 259200
-    consumer:
-        name: local
-        temporary: true
+dataplane:
+    logger:
+        debug: true
+        level: debug
+        with:
+            app: dataplane
+    database:
+        uri: sqlite:///tmp/kanthor.sqlite
+    msgbroker:
+        uri: nats://127.0.0.1:4222
+        stream:
+            name: dataplane
+            subject: message
+            replicas: 0
+            limits:
+                msgs: 50000
+                msg_bytes: 65536
+                # 64kb * 50000 ~ 3Gb
+                bytes: 3276800000
+                # 60*60*24*3 = 3d
+                age: 259200
+        consumer:
+            name: message_local
+            temporary: true
+    server:
+        addr: ":8080"
