feat: add metrics

--- a/configs.yaml
+++ b/configs.yaml
@@ -39,6 +39,9 @@ migration:
 dataplane:
   grpc:
     addr: ":8081"
+  metrics:
+    server:
+      addr: ":9090"
 
 scheduler:
   subscriber:
@@ -47,6 +50,9 @@ scheduler:
     filter_subject: kanthor.default.msg.>
     temporary: true
     max_deliver: 1
+  metrics:
+    server:
+      addr: ":9190"
 
 dispatcher:
   subscriber:
@@ -65,3 +71,6 @@ dispatcher:
     timeout: 6000
     sleep_window: 300000
     error_percent_threshold: 25
+  metrics:
+    server:
+      addr: ":9290"
