--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,7 @@ services:
       - "8222:8222"
       - "4222:4222"
     command: "-D -js --http_port 8222"
+
+networks:
+  kanthor:
+    name: kanthor
