fix: docker compose cmd

--- a/docker/docker-compose.services.yaml
+++ b/docker/docker-compose.services.yaml
@@ -47,7 +47,7 @@ services:
     volumes:
       - ./.kanthor:/root/.kanthor
     command:
-      - run migration --keep-running
+      - migrate --keep-running
 
   dataplane:
     depends_on:
