--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,151 @@ services:
       - "4222:4222"
     command: "-D -js --http_port 8222"
 
+  storage:
+    container_name: kanthor-storage
+    image: postgres:13-alpine
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=changemenow
+    user: postgres
+    healthcheck:
+      test: [ "CMD", "pg_isready" , "-U", "postgres" ]
+      interval: 8s
+      timeout: 4s
+      retries: 16
+
+  cache:
+    container_name: kanthor-cache
+    image: redis:6-alpine
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 1s
+      timeout: 4s
+      retries: 16
+
+  migration:
+    depends_on:
+      storage:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+    container_name: kanthor-services-migration
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - migrate --keep-running
+    healthcheck:
+      test: [ "CMD", "cat", "/tmp/kanthor.migrate.readiness" ]
+      interval: 8s
+      timeout: 4s
+      retries: 16
+
+  controlplane:
+    depends_on:
+      streaming:
+        condition: service_started
+      storage:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+    container_name: kanthor-services-controlplane
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "8080:8080"
+      - "9090:9090"
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - serve controlplane
+
+  dataplane:
+    depends_on:
+      streaming:
+        condition: service_healthy
+      storage:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+      migration:
+        condition: service_healthy
+      dispatcher:
+        condition: service_healthy
+      scheduler:
+        condition: service_healthy
+    container_name: kanthor-services-dataplane
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "8181:8181"
+      - "9190:9190"
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - serve dataplane
+
+  scheduler:
+    depends_on:
+      streaming:
+        condition: service_started
+      storage:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+      migration:
+        condition: service_healthy
+    container_name: kanthor-services-scheduler
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "9290:9290"
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - serve scheduler
+
+  dispatcher:
+    depends_on:
+      streaming:
+        condition: service_started
+      storage:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+      migration:
+        condition: service_healthy
+    container_name: kanthor-services-dispatcher
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "9390:9390"
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - serve dispatcher
+
 networks:
   kanthor:
     name: kanthor
