--- a/data/authorizator/casbin_rbac_model.conf
+++ b/data/authorizator/casbin_rbac_model.conf
@@ -1,8 +1,8 @@
 [request_definition]
-r = sub, dom, obj, act
+r = sub, ws, obj, act
 
 [policy_definition]
-p = sub, dom, obj, act
+p = sub, ws, obj, act
 
 [role_definition]
 g = _, _, _
@@ -11,4 +11,4 @@ g = _, _, _
 e = some(where (p.eft == allow)) && !some(where (p.eft == deny))
 
 [matchers]
-m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
+m = g(r.sub, p.sub, r.ws) && r.ws == p.ws && r.obj == p.obj && r.act == p.act
