--- a/configs.yaml
+++ b/configs.yaml
@@ -18,20 +18,6 @@ cache: &cache
   uri: redis://127.0.0.1:6379/1
   time_to_live: 300000
 
-authenticator: &authenticator
-  engine: access_secret_key
-  access_secret_key:
-    access_key: kanthor_root_key
-    secret_key: kanthor_root_password
-
-authorizator: &authorizator
-  engine: casbin
-  casbin:
-    model_uri: file://./data/authorizator/casbin_rbac_model.conf
-    policy_uri: postgres://postgres:changemenow@127.0.0.1/postgres?connect_timeout=30&application_name=kanthor.authorizator
-    watcher:
-      uri: nats://127.0.0.1:4222
-
 # common
 bucket:
   layout: "20060102"
@@ -59,8 +45,18 @@ migration:
       source: file://./migration/datastore/sql
 
 controlplane:
-  authenticator: *authenticator
-  authorizator: *authorizator
+  authenticator:
+    engine: ask
+    ask:
+      access_key: kanthor_root_key
+      secret_key: kanthor_root_password
+  authorizator:
+    engine: casbin
+    casbin:
+      model_uri: file://./data/authorizator/casbin_rbac_model.conf
+      policy_uri: postgres://postgres:changemenow@127.0.0.1/postgres?connect_timeout=30&application_name=kanthor.authorizator
+      watcher:
+        uri: nats://127.0.0.1:4222
   cache: *cache
   gateway:
     protocol: grpc
@@ -73,7 +69,14 @@ controlplane:
       addr: ":9090"
 
 dataplane:
-  authenticator: *authenticator
+  authenticator:
+    engine: cipher
+    cipher:
+      key: b16142af34f3235bf221f1f620bf59d1 # md5 hash of kanthor_root_key
+  authorizator:
+    engine: noop
+    noop:
+      always_pass: true
   publisher:
     connection: *streaming
   cache: *cache
