--- a/configs.yaml
+++ b/configs.yaml
@@ -19,6 +19,9 @@ cache: &cache
   time_to_live: 300000
 
 # common
+crypto: &crypto
+  key: b16142af34f3235bf221f1f620bf59d1 # md5 hash of kanthor_root_key
+
 bucket:
   layout: "20060102"
 
@@ -55,6 +58,7 @@ controlplane:
     casbin:
       model_uri: file://./data/authorizator/casbin_rbac_model.conf
       policy_uri: postgres://postgres:changemenow@127.0.0.1/postgres?connect_timeout=30&application_name=kanthor.authorizator
+      policy_namespace: controlplane
       watcher:
         uri: nats://127.0.0.1:4222
   cache: *cache
@@ -71,12 +75,15 @@ controlplane:
 dataplane:
   authenticator:
     engine: cipher
-    cipher:
-      key: b16142af34f3235bf221f1f620bf59d1 # md5 hash of kanthor_root_key
+    cipher: *crypto
   authorizator:
-    engine: noop
-    noop:
-      always_pass: true
+    engine: casbin
+    casbin:
+      model_uri: file://./data/authorizator/casbin_rbac_model.conf
+      policy_uri: postgres://postgres:changemenow@127.0.0.1/postgres?connect_timeout=30&application_name=kanthor.authorizator
+      policy_namespace: dataplane
+      watcher:
+        uri: nats://127.0.0.1:4222
   publisher:
     connection: *streaming
   cache: *cache
