--- a/data/authorizator/casbin_rbac_model.conf
+++ b/data/authorizator/casbin_rbac_model.conf
@@ -1,8 +1,8 @@
 [request_definition]
-r = sub, tenant, obj, act
+r = tenant, sub, obj, act
 
 [policy_definition]
-p = sub, tenant, obj, act
+p = tenant, sub, obj, act
 
 [role_definition]
 g = _, _, _
@@ -11,4 +11,4 @@ g = _, _, _
 e = some(where (p.eft == allow)) && !some(where (p.eft == deny))
 
 [matchers]
-m = g(r.sub, p.sub, r.tenant) && r.tenant == p.tenant && r.obj == p.obj && r.act == p.act
+m = g(r.tenant, r.sub, p.sub) && r.tenant == p.tenant && r.obj == p.obj && r.act == p.act
