--- a/data/authorizator/casbin_rbac_model.conf
+++ b/data/authorizator/casbin_rbac_model.conf
@@ -1,14 +1,14 @@
 [request_definition]
-r = tenant, sub, obj, act
+r = sub, tenant, obj, act
 
 [policy_definition]
-p = tenant, sub, obj, act
+p = sub, tenant, obj, act
 
 [role_definition]
 g = _, _, _
 
 [policy_effect]
-e = some(where (p.eft == allow)) && !some(where (p.eft == deny))
+e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.tenant, r.sub, p.sub) && r.tenant == p.tenant && r.obj == p.obj && r.act == p.act
+m = g(r.sub, p.sub, r.tenant) && r.tenant == p.tenant && r.obj == p.obj && r.act == p.act
