--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -15,16 +15,21 @@ streaming: &streaming
       age: 259200
 
 cache: &cache
-  uri: redis://cache:6379/1
-  time_to_live: 300000
+  uri: redis://cache:6379/0
+  time_to_live: 3600000 # 1 hour
+
+bucket:
+  layout: "20060102"
 
 cryptography:
   kdf: {}
   symmetric:
     key: b16142af34f3235bf221f1f620bf59d1 # md5 hash of kanthor_root_key
 
-bucket:
-  layout: "20060102"
+idempotency:
+  namespace: idempotency
+  uri: redis://cache:6379/0
+  time_to_live: 86400000 # 1 day
 
 logger:
   pretty: true
@@ -62,6 +67,8 @@ sdkapi:
       policy_namespace: sdk
       watcher:
         uri: nats://streaming:4222
+  publisher:
+    connection: *streaming
 
 portalapi:
   cache: *cache
