--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,6 +87,28 @@ services:
     command:
       - serve sdkapi
 
+  portalapi:
+    depends_on:
+      streaming:
+        condition: service_started
+      warehouse:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+      migration:
+        condition: service_healthy
+    container_name: kanthor-services-portalapi
+    build: .
+    restart: unless-stopped
+    networks:
+      - kanthor
+    ports:
+      - "8180:8180"
+    volumes:
+      - ./docker/.kanthor:/root/.kanthor
+    command:
+      - serve portalapi
+
   scheduler:
     depends_on:
       streaming:
